k8s/python/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moscow-time
  labels:
    app: moscow-time
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moscow-time
  template:
    metadata:
      labels:
        app: moscow-time
    spec:
      containers:
        - name: moscow-time
          image: iviosab/moscow_time:latest
          ports:
            - containerPort: 5000
