k8s/python/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-python-svc
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
