k8s/python/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-msk-time-service
spec:
  selector:
    app: python-msk-time
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30000
  type: NodePort
